--- a/Config/config
+++ b/Config/config
@@ -1,7 +1,7 @@
-serverIntro:60
+serverIntro:Welcome to the NewNetworkingSystem branch!
 ipPort:1337
 maximumPlayers:20
-minimumPlayers:0
+minimumPlayers:4
 waitingRoomTime:5
 gameplayTime:600
 leaderboardTime:30
